Updated Account and Transaction
- Added feature to delete account
- Added Crossorigins to communicate to frontend
